# CodeWhale

./: .cnb.yml  .env.example  AGENTS.md  CHANGELOG.md  CODEWHALE_0_8_68_TRACKER.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF_v0.8.68_completion.md  README.ja-JP.md  README.ko-KR.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  package-lock.json
.github/: APPROVED_CONTRIBUTORS  AUTHOR_MAP
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: approve-contributor.yml  auto-tag.yml  ci.yml  issue-gate.yml  nightly.yml  pr-gate.yml  release.yml  stale.yml  web.yml
benchmark_results/: deepseek-anthropic-comparison-2026-06-24.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs
crates/build-support/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/assets/: models_dev.bundled.json
crates/config/src/: catalog.rs  lib.rs  model_reference.rs  models_dev.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs  xai_credentials.rs
crates/config/src/catalog/: tests.rs
crates/config/src/route/: candidate.rs  capabilities.rs  conformance_tests.rs  mod.rs  offering.rs  resolver.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/lane/src/: runtime.rs  worktree.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs  outcome.rs
crates/tui/: CHANGELOG.md  Cargo.toml
crates/tui/assets/: model_catalog.bundled.json
crates/tui/locales/: en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: acp_server.rs  automation_manager.rs  client.rs  compaction.rs  config.rs  config_persistence.rs  config_ui.rs  context_budget.rs  context_report.rs  cost_status.rs  deepseek_theme.rs  dependencies.rs  error_taxonomy.rs  goal_loop.rs  hashing.rs  hooks.rs  localization.rs  main.rs  mcp.rs  model_inventory.rs  model_profile.rs  model_registry.rs  model_routing.rs  models.rs  oauth.rs  palette.rs  prefix_cache.rs  pricing.rs  project_context.rs  project_context_cache.rs  prompt_zones.rs  prompts.rs  provider_lake.rs  provider_readiness.rs  repo_law.rs  resource_telemetry.rs  route_billing.rs  route_budget.rs  route_runtime.rs  runtime_api.rs  (+14 more)
crates/tui/src/client/: anthropic.rs  chat.rs
crates/tui/src/commands/: balance.rs  config.rs  goal.rs  mod.rs
crates/tui/tests/: diagnostic_read_only.rs  palette_audit.rs  plugin_e2e_acceptance.rs  qa_pty.rs  reasoning_content_replayed_after_tool_call.rs  release_runtime_qa.rs  skill_cli.rs  verifiers_harness_contract.rs
crates/whaleflow/src/: replay.rs
crates/workflow/: Cargo.toml
crates/workflow-js/: Cargo.toml
crates/workflow-js/src/: driver.rs  error.rs  lib.rs  schema.rs  testing.rs  vm.rs
crates/workflow-js/tests/: vm_tests.rs
crates/workflow/src/: elevation.rs  gates.rs  js_authoring.rs  lib.rs  model_policy.rs  named_fleet.rs  replay.rs
docs/: ACCESSIBILITY.md  AGENT_RUNTIME.md  AGENT_WORKFLOWS_0868.md  ARCHITECTURE.md  AUTOMATIC_WORKFLOWS.md  CLASSROOM_INSTALL.md  CLAUDE_PLUGIN_COMPAT.md  CNB_MIRROR.md  CONFIGURATION.md  CONTRIBUTORS.md  DOGFOOD_v0.8.67_COMPUTER_USE.md  DOGFOOD_v0.8.67_CURSOR_RESULTS.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  LEGACY_PATHS.md  MCP.md  MODEL_LAB.md  MODES.md  ORCA_CONNECTOR.md  PLUGIN_BUNDLES.md  PROVIDERS.md  RECEIPTS.md  RECURSIVE_SELF_IMPROVEMENT.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SANDBOX.md  SKILL_INVOCATION_DESIGN.md  SUBAGENTS.md  TENCENT_CLOUD_REMOTE_FIRST.md  TENCENT_LIGHTHOUSE_HANDOFF_PROMPT.md  TENCENT_LIGHTHOUSE_HK.md  TOOL_SURFACE.md  TTC_DESIGN.md  V0865_RELEASE_LEDGER.md  V0_8_61_TRAIN_PROMPTS.md  V0_9_0_EXECUTION_MAP.md  WORKFLOW_AUTHORING.md
docs/architecture/: command-dispatch.md  pr-issue-evidence-prep.md
docs/evidence/: layer-5-1-user-command-registry-evidence.md
docs/releases/: v0.8.68-release-candidate.md
docs/rfcs/: FILE_DECOMPOSITION_0_9_0.md  WORKFLOW_EXTERNAL_MEMORY.md
docs/skills/codew-release-qa-sweep/: SKILL.md
extensions/vscode/: package-lock.json
fleets/: v0868-stopship.toml
integrations/feishu-bridge/: package-lock.json
integrations/telegram-bridge/src/: index.mjs  lib.mjs
integrations/telegram-bridge/test/: dispatch-concurrency.test.mjs  lib.test.mjs
integrations/weixin-bridge/: README.md
npm/codewhale/: README.md  package.json
npm/codewhale/scripts/: artifacts.js  install.js  preflight-glibc.js  verify-release-assets.js
npm/codewhale/test/: artifacts.test.js  install.test.js  release-assets.test.js
npm/deepseek-tui/: package.json
npm/runtime-sdk/: README.md
npm/runtime-sdk/test/: fleet-client.test.mjs
scripts/: catalog_models_dev.py  check-coauthor-trailers.py  check-tui-product-vocabulary.sh  mobile-smoke.sh  test-tui-hermetic.sh  test_check_coauthor_trailers.py
scripts/benchmarks/: pier_codewhale_local_agent.py  run-codewhale-terminal-bench.py  run-deepseek-direct-terminal-bench.py
scripts/benchmarks/harbor/: codewhale_local_agent.py  deepseek_direct_agent.py
scripts/release/: branch-hygiene.sh  check-ohos-deps.sh  crates.sh  generate-release-body.sh  install-dogfood.sh  prepare-local-release-assets.js  require-release-tag-checkout.test.sh  verify-release-assets.sh
scripts/remote-smoke/: setup-vm.sh
web/: README.md  package-lock.json  package.json
web/app/[locale]/: layout.tsx  page.tsx
web/components/: install-binary.tsx  mobile-menu.tsx  nav.tsx
web/lib/: docs-map.ts  facts-drift.test.ts  facts-drift.ts  facts.generated.ts  page-meta.ts  provider-mapping.test.ts
web/public/: install.sh
web/scripts/: check-docs.mjs  check-facts.mjs  facts-lib.mjs
workflows/: stopship.workflow.js  v0868_stopship_lane.workflow.js
(+212 files in other folders)
