[package]
name = "codewhale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for CodeWhale"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.68" }
codewhale-config = { path = "../config", version = "0.8.68" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.68" }
codewhale-hooks = { path = "../hooks", version = "0.8.68" }
codewhale-mcp = { path = "../mcp", version = "0.8.68" }
codewhale-protocol = { path = "../protocol", version = "0.8.68" }
codewhale-state = { path = "../state", version = "0.8.68" }
codewhale-tools = { path = "../tools", version = "0.8.68" }
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
