[package]
name = "codewhale-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server lifecycle and tool proxy compatibility for CodeWhale"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
