[package]
name = "codewhale-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "App-server protocol frames for CodeWhale runtime integrations"

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
